fixed font weight being too thin on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5 {
   margin: 0;
 }
 h2 {
-  font-weight: 100;
+  font-weight: 300;
 }
 
 a {
